--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get: ^4.6.5
   flutter_secure_storage: ^5.0.2
   blur_bottom_bar: ^1.0.3
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
