--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   blur_bottom_bar: ^1.0.3
   url_launcher: ^6.1.5
   webview_flutter: ^3.0.4
+  video_player: ^2.4.5
+  audio_service: ^0.18.7
+  just_audio: ^0.9.28
+  custom_sliding_segmented_control: ^1.7.1
 
 dev_dependencies:
   flutter_test:
