--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   video_thumbnail: ^0.5.2
   flutter_video_info: ^1.2.0
   audio_video_progress_bar: ^0.10.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
