--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   audio_video_progress_bar: ^0.10.0
   uuid: ^3.0.6
   perfect_volume_control: ^1.0.5
+  flutter_headset_detector: ^2.1.0
 
 dev_dependencies:
   flutter_test:
